--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
-*{
+/**{
     background-color:#589ee882;
-}
+    color
+}*/
 
 .prueba{
     color: rgba(64, 157, 157, 0.852);
@@ -19,6 +20,7 @@
         overflow: hidden;
         background: var(--bg-color);
         animation:fadeIn 2s ease-in-out;
+        
 }
 @keyframes fadeIn {
 0% {
@@ -57,12 +59,11 @@ width: 15%;
 a{
     text-decoration:none;
     color: rgba(55, 147, 204, 0.838);
-    background-color: rgb(219, 214, 235);
-    margin: 1px;
-    padding: 10px;
-    border:20px;
+    margin: 5px;
+    padding: 1px;
+    border:22px;
     text-align: center;
-    font-size:small;
+    font: size 23px;
 
 
 
@@ -72,6 +73,7 @@ section{
     display: flex;
     align-items: right;
     justify-content:auto;
+    
 }
 
 .profileP{
@@ -95,21 +97,28 @@ section{
 .grid1{
     display: grid;
     justify-content: flex-end;
+    grid-template-columns: 3;
+    
     
 
 
 }
-*{
+
+
+
+body{
 
     background-image: url(./5652012.jpg);
     background-size: cover;
     background-position: center;
-}*/
+}
+
+*/
 p{
-    color: aqua;
+    color: rgb(11, 14, 14);
 }
 li{
-    color: rgb(144, 161, 92);
+    color: rgb(156, 30, 246);
 }
 
 .expAbout{
@@ -155,4 +164,52 @@ li{
     to {
     background-position: 200% center;
         }
+}
+
+    a{
+    font-size:medium;
+    color: #99294e;
+}
+button{
+    position: relative;
+    z-index: 0;
+    width: 200px;
+    height: 56px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+    color : var(--line_color);
+    letter-spacing: 2px;
+    transition: all .3s ease;
+    background-color:rgb(32, 171, 226);
+
+
+}
+button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 103%;
+}
+
+ul{
+    font-size: 122%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+}
+.orlandoPS{
+    font-size: 25px;
+    width: 29%;
+}
+section a{
+    font-family: helvetica;
+    font-size:33px;
+}
+
+#aboutme{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
+    
+
+
 }
