added a github link also added a project section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -219,3 +219,14 @@ footer{
     font-size: 15px;
     
 }
+
+.projects{
+    color: aquamarine;
+}
+.projects2{
+    color: #aaa1a4;
+}
+.project3{
+    color: aliceblue;
+}
+.experience3{color: #ff1361;}
